# anthem-cx

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
docs/: SUMMARY.md  getting_started.md  index.md
docs/community/: CHANGES.md  help.md  index.md
docs/examples/: coloring.md  frame.md  independent.md  index.md  orphan.md  path.md  queens.md  reachability.md  tiling.md  transitive.md  two-elements.md  uniqueness.md
docs/reference/: cli.md  counterexample-search.md  external-equivalence.md  index.md  language.md
docs/reference/api/: cx_program.md  index.md
docs/reference/api/analysis/: assumptions.md  conflict.md  dependency.md  index.md  inputs.md  local.md
docs/reference/api/transformation/: aggregate.md  choice.md  head.md  index.md  public_reduct.md  rejections.md
docs/reference/api/utils/: data.md  errors.md  index.md  logging.md  output.md  (+3 more)
docs/reference/cli/: index.md
docs/reference/encodings/: index.md
docs/use/: help.md  installation.md  quick-start.md
examples/: conflict.lp  test.lp
examples/coloring/: README.md  assumptions.lp  coloring-assumption.ug  coloring.1.lp  coloring.2.lp  coloring.ug
examples/dependency/: README.md  eva.ug  mixed-cycle.lp  private-cycle.lp  recursive-aggregate.lp
examples/equivalent/cover/: cover.1.lp  cover.2.lp  cover.ug
examples/equivalent/tiling/: tiling.1.lp  tiling.2.lp  tiling.U.po  tiling.ug
examples/eva/: README.md
examples/frame/: README.md  assumptions.lp  frame-assumptions.ug  frame.1.lp  frame.2.lp  frame.po
examples/independent/: README.md  assumptions.lp  independent-assumption.ug  independent.1.lp  independent.ug  right.lp
examples/orphan/: README.md  assumptions.lp  orphan-assumptions.ug  orphan.2.lp
examples/path/: README.md  assumptions.lp  backward-mg.lp  backward.lp  forward-mg.lp  forward.lp
examples/queens/: README.md  left.lp  queens.2.lp  queens.ug
examples/reachability/: README.md  assumptions.lp  reachability.1.lp  reachability.2.lp  reachability.ug
examples/sparql/: README.md  results_reify.md  results_simple.md  run_reify.sh  run_simple.sh
examples/sparql/noprojection/: noprojection.csv
examples/sparql/projection/: projection.csv
examples/sparql/rdfs/: rdfs.csv
examples/tiling/: README.md  assumptions.lp  right.lp  tiling.1.lp  tiling.ug
examples/transitive/: README.md  assumptions.lp  transitive.1.lp  transitive.2.lp
examples/two-elements/: README.md  two-elements.1.lp  two-elements.2.lp  two-elements.3.lp
examples/uniqueness/: 1.1.lp  1.2.lp  2.1.lp  2.2.lp  3.1.lp  3.2.lp  4-right.lp  5-left.lp  5-right.lp  6-left.lp  6-right.lp  6.2.lp  README.md  uniqueness.ug
src/anthem_counterexample/: __init__.py  __main__.py  eqt.py
src/anthem_counterexample/transformation/: choice.py  head.py
src/anthem_counterexample/utils/: __init__.py  conflict.py  dependency.py  parse_user_guide.py  parser.py  solving.py  transformation.py
src/anthem_cx/: __init__.py  __main__.py  cx_program.py  eqt.py
src/anthem_cx/analysis/: __init__.py  assumptions.py  conflict.py  dependency.py  inputs.py  local.py
src/anthem_cx/transformation/: __init__.py  aggregate.py  choice.py  head.py  public_reduct.py  reject_classical_negation.py  reject_disjunction.py
src/anthem_cx/utils/: __init__.py  data.py  errors.py  logging.py  output.py  parse_program.py  parse_user_guide.py  parser.py  solving.py  transformation.py
tests/: __init__.py  test_assemble.py  test_cx_program.py  test_eqt.py  test_main.py  utils.py
tests/analysis/: __init__.py  test_assumptions.py  test_conflict.py  test_dependency.py  test_inputs.py  test_local.py
tests/transformation/: __init__.py  test_aggregate.py  test_choice.py  test_head.py  test_public_reduct.py  test_reject_classical_negation.py  test_reject_disjunction.py
tests/utils/: test_data.py  test_output.py  test_parse_program.py  test_parse_user_guide.py  test_solving.py  test_transformation.py
(+157 files in other folders)
