[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anthem-cx"
authors = [{ name = "Jan Heuer", email = "jan.heuer@uni-potsdam.de" }]
description = "A tool to automatically find counterexamples to external equivalence problems."
requires-python = ">=3.12"
dependencies = [
    "clingo>=5.7.1",
    "networkx",
    "guess_and_check@git+https://github.com/potassco/guess_and_check.git",
]
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/potassco/anthem-cx.git"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint"]
typecheck = ["types-setuptools", "mypy", "types-networkx"]
test = ["coverage[toml]"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
dev = ["anthem_cx[test,typecheck,lint_pylint]"]

[project.scripts]
anthem-cx = "anthem_cx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.coverage.run]
source = ["anthem_cx", "tests"]
omit = ["*/anthem_cx/__main__.py"]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]
