[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anthem-cx"
authors = [{ name = "Jan Heuer", email = "jan.heuer@uni-potsdam.de" }]
description = "A tool to automatically find counterexamples to external equivalence problems."
requires-python = ">=3.10"
dependencies = [
    "clingo>=5.7.1",
    "networkx",
    "guess_and_check@git+https://github.com/potassco/guess_and_check.git",
]
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/potassco/anthem-cx.git"

[project.optional-dependencies]
lint = ["ruff"]
typecheck = ["ty"]
test = ["pytest", "pytest-cov", "coverage[toml]"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0",
    "mkdocs-literate-nav",
    "pygments_clingo",
]
dev = ["anthem_cx[test,typecheck,lint]"]

[project.scripts]
anthem-cx = "anthem_cx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "/usr/**",
    "**/site-packages/**",
    "**/node_modules/**",
    "**/typeshed-fallback/**",
]

[tool.ruff.lint]
extend-select = ["I", "E", "F", "B", "C4", "D", "ARG", "SIM", "ANN", "Q"]
ignore = [
    "E741",
    "D200",
    "D203",
    "D212",
    "D413",
    "B023", # broken lint
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["anthem_cx", "tests"]
omit = ["*/anthem_cx/__main__.py", "*/anthem_cx/utils/logging.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "raise NotImplementedError",
    "raise TypeError",
    "nocoverage",
    "assert",
    "\\.\\.\\.",
]
